@@ -35,6 +35,8 @@ Bug fixes
  * Improved Wagtail logo contrast by adding a background (Brian Edelman, Simon Evans, Ben Enright)
  * Prevent duplicate notification messages on page locking (Jacob Topp-Mugglestone)
  * Rendering of non field errors for InlinePanel items (Storm Heg)
+ * ``{% image ... as var %}`` now clears the context variable when passed None as an image (Maylon Pedroso)
+
 
 Upgrade considerations
 ======================
